--- a/src/components/LocationForms/SingleGeoLocationForm.css
+++ b/src/components/LocationForms/SingleGeoLocationForm.css
@@ -1,5 +1,8 @@
 .geo-location-form {
+  width: 400px;
   margin: 10px 10px;
+  padding: 4px;
+  border: 1px solid black;
 }
 
 .inputs-container{
@@ -31,4 +34,11 @@ input.error {
 .error-msg {
   color: red;
   font-size: 14px;
+}
+
+.grey-border {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  box-shadow: 0 2px 2px rgba(70, 70, 70, 0.623);
 }
